--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,14 @@ DB_NAME="postgres"
 DB_PORT=5432
 DB_USER="postgres.hmfxndkmzasbkglbvntd"
 DB_PASSWORD = "aC5g8Y1diJcfsqUm"
+
+
+############ NODEMAILER VARIABLES
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT='465'
+EMAIL_SERVICE='gmail'
+EMAIL_USER='hanchoTech@gmail.com'
+EMAIL_PASSWORD='oykqiftvcmmndwnc'
+
+###########PAYSTACK SECRET KEY
+PAYSTACK_SECRET_KEY = "sk_test_02f9fc77f66c3f51e2496ac5ee11b568792a03fa"
