--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.3",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
