--- a/event-app/package.json
+++ b/event-app/package.json
@@ -8,6 +8,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-portal": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^3.0.3",
     "@reduxjs/toolkit": "^2.2.3",
